fix: handle word break in url inside post-it

--- a/src/components/post-it/content.module.css
+++ b/src/components/post-it/content.module.css
@@ -1,10 +1,11 @@
 .content {
   flex: 1 1 100%;
-  padding: 5px 20px;
+  padding: 5px 20px 10px;
   font-size: 14px;
   line-height: 1.75;
   transition: background-color 160ms var(--ds-transition-easing);
   resize: none;
+  overflow-wrap: break-word;
   overflow: hidden;
   border: 0;
 }
