--- a/src/components/post-it/post-it.module.css
+++ b/src/components/post-it/post-it.module.css
@@ -70,6 +70,7 @@
   gap: 8x;
   overflow: auto;
   scrollbar-width: thin;
+  scroll-behavior: smooth;
   border-radius: inherit;
 }
 
